[package]
name = "kptool"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive"] }
keepass = "0.7.25"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
sha256 = "1.5.0"
