[package]
name = "kptool"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
keepass = "0.8.16"
regex = "1.12.2"
#serde = { version = "1.0.228", features = ["derive"] }
